[package]
name = "jot-scrach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"] }
toml = "0.5.9"
directories = "4.0.1"
fs_extra = "1.2.0"
